packages/flow-type-tests/__tests__/fixtures/scenario-opacity-string.0.114.0.txt
Error ----------------------------------------------- packages/flow-type-tests/__tests__/fixtures/opacity-string.js:5:18

Cannot call `styled` because a call signature declaring the expected parameter / return type is missing in object
literal [1] but exists in function type [2].

   packages/flow-type-tests/__tests__/fixtures/opacity-string.js:5:18
    5| export const A = styled('span', {':hover': {opacity: '0.7'}});
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/opacity-string.js:5:33
    5| export const A = styled('span', {':hover': {opacity: '0.7'}});
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/styletron-react/src/types.js:54:19
   54|   <Props>(string, (Props) => StyleObject): StyletronComponent<Props>,
                         ^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 1 error

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
